footer modificado en billeterra

--- a/estilo/_mobile.scss
+++ b/estilo/_mobile.scss
@@ -283,6 +283,10 @@
                 }
             }
 
+            .footer_desktop{
+                display: none;
+            }
+
            
 
         
