--- a/estilo/_desktop.scss
+++ b/estilo/_desktop.scss
@@ -335,21 +335,48 @@
             bottom: 0;
 
             .nav{
-                width:5%;
+                width:6%;
                 margin: 10px;
                 padding: 10px;
+                padding-right: 20px;
+                border-radius: 10px;
 
                 img {
-                    width: 100%;
+                    width: 50%;
+                }
+
+                a{
+                    text-decoration: none;
                 }
             }
 
             .activo{
                 background-color: white;
-                border-radius: 50%;
+                
             }
         }
 
-       
+       .footer_mobile{
+           display: none;
+       }
+
+    
+
+       .logoSeccion{
+           width: 100%;
+           display: flex;
+           justify-content: flex-start;
+           align-items: center;
+
+           p{
+               margin-left: 10px;
+               color: white;
+           }
+
+           .textoActivo{
+               color: $colorPrincipal;
+               padding-right: 10px;
+           }
+       }
 
 }
