cambie footerdesktop en todas las secciones

--- a/estilo/_mobile.scss
+++ b/estilo/_mobile.scss
@@ -283,7 +283,7 @@
                 }
             }
 
-            .footer_desktop{
+            .footerDesktop{
                 display: none;
             }
 
