--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -359,7 +359,8 @@
     width: 85vw;
     margin: 10px;
   }
-  footer {
+  .footerDesktop {
+    width: 100vw;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -374,21 +375,26 @@
     position: fixed;
     bottom: 0;
   }
-  footer .nav {
-    width: 6%;
+  .footerDesktop .nav {
+    width: 15%;
+    margin: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .footerDesktop .nav a {
     margin: 10px;
-    padding: 10px;
-    padding-right: 20px;
-    border-radius: 10px;
-  }
-  footer .nav img {
-    width: 50%;
-  }
-  footer .nav a {
     text-decoration: none;
   }
-  footer .activo {
+  .footerDesktop .nav img {
+    width: 20%;
+  }
+  .footerDesktop .activo {
     background-color: white;
+    border-radius: 10px;
   }
   .footerMobile {
     display: none;
