--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -815,6 +815,14 @@
   }
 }
 
+.atras {
+  z-index: 2;
+}
+
+header {
+  z-index: 100;
+}
+
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
   * {
