--- a/estilo/_desktop.scss
+++ b/estilo/_desktop.scss
@@ -1,6 +1,6 @@
 @import "variables";
 
-
+//prueba
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
     /* *{
